# bowl-2018

./: .gitignore  README.md  pyproject.toml
notebooks/: microscope-segmentation.ipynb
